feat: 阶段2-9 全部实现 - 上门/比价/日报/验收/支付/聊天/管理后台
后端: V11-V16 迁移(上门/服务目录/日报/验收/聊天/支付/结算/售后) + 14 REST 端点
Flutter: 支付/售后/结算页面 + PaymentApiClient + 聊天+日报+验收+到访

Flutter test: 134 pass/3 skip/0 fail
Flutter analyze: 0 error/0 warning